--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,15 @@
     <meta charset="utf-8" />
     <meta name="description" content=" 1st angular dashboard" />
     <meta name="author" content="no.caller__id" />
+    <meta
+      name="google-signin-client_id"
+      content="173031288157-04e11udn1m1lrqkv4k0bg8h9u8oqf2jf.apps.googleusercontent.com"
+    />
+
+    <script src="https://apis.google.com/js/platform.js"></script>
+
     <title>AdminPro</title>
-    <base href="/">
+    <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Favicon icon -->
     <link
@@ -23,11 +30,7 @@
     <!-- Custom CSS -->
     <link href="./assets/css/style.css" rel="stylesheet" />
     <!-- You can change the theme colors from here -->
-    <link
-     
-      id="theme"
-      rel="stylesheet"
-    />
+    <link id="theme" rel="stylesheet" />
   </head>
   <body class="fix-header card-no-border fix-sidebar">
     <!-- ============================================================== -->
@@ -60,7 +63,6 @@
     <!--Custom JavaScript -->
     <script src="./assets/js/custom.js"></script>
     <!-- ============================================================== -->
-  
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   </body>
