End of section 15: profile component

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
     <script src="https://apis.google.com/js/platform.js"></script>
 
-    <title>AdminPro</title>
+    <title>AD-APP</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Favicon icon -->
@@ -39,7 +39,7 @@
     <div class="preloader">
       <div class="loader">
         <div class="loader__figure"></div>
-        <p class="loader__label">Admin Pro</p>
+        <p class="loader__label">AD-APP</p>
       </div>
     </div>
 
